--- a/index.html
+++ b/index.html
@@ -143,6 +143,171 @@
             </div>
         </section>
         <!-- end About -->
+
+        <section class="appartments" id="appartments">
+            <div class="container">
+                <h2 class="section-title">More Then 500+ <br /> Appartments For Rent</h2>
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="appartment-card">
+                            <div class="appartment-img">
+                                <img src="images/others/appartment.png" alt="appartments img">
+                            </div>
+                            <div class="appartment-body">
+                                <h3 class="appartment-title">Random Street, Apt B453, New York</h3>
+                                <div class="appartment-details">
+                                    <div class="price">
+                                        <p>$3,500</p>
+                                    </div>
+                                    <div class="appartment-feature flex-center">
+                                        <div class="feature-one flex-center">
+                                            <img src="images/icons/shower.svg" alt="shower icon" />
+                                            <p>2 BA</p>
+                                        </div>
+                                        <div class="feature-two flex-center">
+                                            <img src="images/icons/bed.svg" alt="bed icon" />
+                                            <p>2 BD</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="appartment-card">
+                            <div class="appartment-img">
+                                <img src="images/others/appartment.png" alt="appartments img">
+                            </div>
+                            <div class="appartment-body">
+                                <h3 class="appartment-title">Random Street, Apt B453, New York</h3>
+                                <div class="appartment-details">
+                                    <div class="price">
+                                        <p>$3,500</p>
+                                    </div>
+                                    <div class="appartment-feature flex-center">
+                                        <div class="feature-one flex-center">
+                                            <img src="images/icons/shower.svg" alt="shower icon" />
+                                            <p>2 BA</p>
+                                        </div>
+                                        <div class="feature-two flex-center">
+                                            <img src="images/icons/bed.svg" alt="bed icon" />
+                                            <p>2 BD</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="appartment-card">
+                            <div class="appartment-img">
+                                <img src="images/others/appartment.png" alt="appartments img">
+                            </div>
+                            <div class="appartment-body">
+                                <h3 class="appartment-title">Random Street, Apt B453, New York</h3>
+                                <div class="appartment-details">
+                                    <div class="price">
+                                        <p>$3,500</p>
+                                    </div>
+                                    <div class="appartment-feature flex-center">
+                                        <div class="feature-one flex-center">
+                                            <img src="images/icons/shower.svg" alt="shower icon" />
+                                            <p>2 BA</p>
+                                        </div>
+                                        <div class="feature-two flex-center">
+                                            <img src="images/icons/bed.svg" alt="bed icon" />
+                                            <p>2 BD</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="appartment-card">
+                            <div class="appartment-img">
+                                <img src="images/others/appartment.png" alt="appartments img">
+                            </div>
+                            <div class="appartment-body">
+                                <h3 class="appartment-title">Random Street, Apt B453, New York</h3>
+                                <div class="appartment-details">
+                                    <div class="price">
+                                        <p>$3,500</p>
+                                    </div>
+                                    <div class="appartment-feature flex-center">
+                                        <div class="feature-one flex-center">
+                                            <img src="images/icons/shower.svg" alt="shower icon" />
+                                            <p>2 BA</p>
+                                        </div>
+                                        <div class="feature-two flex-center">
+                                            <img src="images/icons/bed.svg" alt="bed icon" />
+                                            <p>2 BD</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="appartment-card">
+                            <div class="appartment-img">
+                                <img src="images/others/appartment.png" alt="appartments img">
+                            </div>
+                            <div class="appartment-body">
+                                <h3 class="appartment-title">Random Street, Apt B453, New York</h3>
+                                <div class="appartment-details">
+                                    <div class="price">
+                                        <p>$3,500</p>
+                                    </div>
+                                    <div class="appartment-feature flex-center">
+                                        <div class="feature-one flex-center">
+                                            <img src="images/icons/shower.svg" alt="shower icon" />
+                                            <p>2 BA</p>
+                                        </div>
+                                        <div class="feature-two flex-center">
+                                            <img src="images/icons/bed.svg" alt="bed icon" />
+                                            <p>2 BD</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="appartment-card">
+                            <div class="appartment-img">
+                                <img src="images/others/appartment.png" alt="appartments img">
+                            </div>
+                            <div class="appartment-body">
+                                <h3 class="appartment-title">Random Street, Apt B453, New York</h3>
+                                <div class="appartment-details">
+                                    <div class="price">
+                                        <p>$3,500</p>
+                                    </div>
+                                    <div class="appartment-feature flex-center">
+                                        <div class="feature-one flex-center">
+                                            <img src="images/icons/shower.svg" alt="shower icon" />
+                                            <p>2 BA</p>
+                                        </div>
+                                        <div class="feature-two flex-center">
+                                            <img src="images/icons/bed.svg" alt="bed icon" />
+                                            <p>2 BD</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="section-footer">
+                    <form>
+                        <input type="text" class="input-search" placeholder="Search Location" />
+                        <button class="btn search-btn">Search</button>
+                    </form>
+                    <a href="#" class="btn search-all-btn search-btn">View All Appartments</a>
+                </div>
+            </div>
+        </section>
     </main>
 
 
