Add works section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <title>luxestate</title>
 
     <!-- Google Fonts -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;700&display=swap" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;700&display=swap" />
 
     <!-- Css Vendors -->
     <link rel="stylesheet" href="css/vendors/bootstrap.min.css" />
@@ -104,7 +105,7 @@
     <!-- End Header -->
 
     <main>
-        <!-- Start About -->
+        <!-- Start About Section -->
         <section class="about" id="about">
             <div class="container">
                 <div class="row">
@@ -142,8 +143,9 @@
                 </div>
             </div>
         </section>
-        <!-- end About -->
+        <!-- end About Section -->
 
+        <!-- Start Appartments Section -->
         <section class="appartments" id="appartments">
             <div class="container">
                 <h2 class="section-title">More Then 500+ <br /> Appartments For Rent</h2>
@@ -308,6 +310,69 @@
                 </div>
             </div>
         </section>
+        <!-- End Appartments Section -->
+
+        <!-- Start how work Section-->
+        <section class="works" id="works">
+            <div class="container">
+                <h2 class="section-title">How it works?</h2>
+                <p class="paragraph">In this space market-facing, yet UI work flows , or bake it in.<br>Red flag we need
+                    a recap by eod, cob or whatever comes<br>first agile at the end of the day. </p>
+
+                <div class="row work-boxs">
+                    <div class="col-12 col-lg-4">
+                        <div class="work-box">
+                            <div class="work-box-number"><span>01</span></div>
+                            <div class="work-box-body">
+                                <div class="work-box-title">
+                                    <p class="title-num">01</p>
+                                    <p class="title">Find Your Location</p>
+                                </div>
+                                <p class="paragraph">In this space market-facing, yet UI work flows , or bake it in. Red
+                                    flag we neef the day.</p>
+                                <div class="work-box-links">
+                                    <a href="#">Find Location</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <div class="work-box">
+                            <div class="work-box-number"><span>02</span></div>
+                            <div class="work-box-body">
+                                <div class="work-box-title">
+                                    <p class="title-num">02</p>
+                                    <p class="title">Find Appartment</p>
+                                </div>
+                                <p class="paragraph">In this space market-facing, yet UI work flows , or bake it in. Red
+                                    flag we neef the day.</p>
+                                <div class="work-box-links">
+                                    <a href="#">Find Location</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-4">
+                        <div class="work-box">
+                            <div class="work-box-number"><span>03</span></div>
+                            <div class="work-box-body">
+                                <div class="work-box-title">
+                                    <p class="title-num">03</p>
+                                    <p class="title">Make Contact</p>
+                                </div>
+                                <p class="paragraph">In this space market-facing, yet UI work flows , or bake it in. Red
+                                    flag we neef the day.</p>
+                                <div class="work-box-links">
+                                    <a href="#">Find Location</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end how work Section-->
+
     </main>
 
 
