Add service section

--- a/index.html
+++ b/index.html
@@ -373,6 +373,30 @@
         </section>
         <!-- end how work Section-->
 
+        <!-- Start services Section -->
+        <section class="service">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-6">
+                        <div class="service-img"></div>
+                    </div>
+                    <div class="col-12 col-lg-6">
+                        <div class="service-info">
+                            <h4 class="small-title">Renting</h4>
+                            <p class="paragraph">In this space market-facing, yet UI work flows , or bake it in. Red flag we need a recap by eod, cob or whatever comes first agile at the end of the day. Not enough bandwidth closing these latest prospects is like putting socks on an octopus, yet due diligence</p>
+    
+                            <h4 class="small-title">Selling</h4>
+                            <p class="paragraph">In this space market-facing, yet UI work flows , or bake it in. Cob or whatever comes first agile at the end of the day. Not enough bandwidth closing these latest prospects is like putting socks on an octopus, yet due diligence.Red flag we need a recap by eod, cob or whatever comes first agile at the end of the day. Not enough bandwidth closing these latest prospects is like putting socks on an octopus, yet due diligence</p>
+    
+                            <h4 class="small-title">Building</h4>
+                            <p class="paragraph">In this space market-facing, yet UI work flows , or bake it in. Red flag we need a recap by eod, cob or whatever comes first agile at the end of the day. Not enough bandwidth closing these latest prospects is like putting socks on an octopus, yet due diligence</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End services Section -->
+
     </main>
 
 
