Add agents section and enhancment in style

--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
                 <h2 class="section-title">More Then 500+ <br /> Appartments For Rent</h2>
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="appartment-card">
+                        <div class="appartment-card box">
                             <div class="appartment-img">
                                 <img src="images/others/appartment.png" alt="appartments img">
                             </div>
-                            <div class="appartment-body">
-                                <h3 class="appartment-title">Random Street, Apt B453, New York</h3>
-                                <div class="appartment-details">
+                            <div class="appartment-body box-body">
+                                <h3 class="appartment-title box-title">Random Street, Apt B453, New York</h3>
+                                <div class="appartment-details box-details">
                                     <div class="price">
                                         <p>$3,500</p>
                                     </div>
@@ -176,13 +176,13 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="appartment-card">
+                        <div class="appartment-card box">
                             <div class="appartment-img">
                                 <img src="images/others/appartment.png" alt="appartments img">
                             </div>
-                            <div class="appartment-body">
-                                <h3 class="appartment-title">Random Street, Apt B453, New York</h3>
-                                <div class="appartment-details">
+                            <div class="appartment-body box-body">
+                                <h3 class="appartment-title box-title">Random Street, Apt B453, New York</h3>
+                                <div class="appartment-details box-details">
                                     <div class="price">
                                         <p>$3,500</p>
                                     </div>
@@ -201,13 +201,13 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="appartment-card">
+                        <div class="appartment-card box">
                             <div class="appartment-img">
                                 <img src="images/others/appartment.png" alt="appartments img">
                             </div>
-                            <div class="appartment-body">
-                                <h3 class="appartment-title">Random Street, Apt B453, New York</h3>
-                                <div class="appartment-details">
+                            <div class="appartment-body box-body">
+                                <h3 class="appartment-title box-title">Random Street, Apt B453, New York</h3>
+                                <div class="appartment-details box-details">
                                     <div class="price">
                                         <p>$3,500</p>
                                     </div>
@@ -226,13 +226,13 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="appartment-card">
+                        <div class="appartment-card box">
                             <div class="appartment-img">
                                 <img src="images/others/appartment.png" alt="appartments img">
                             </div>
-                            <div class="appartment-body">
-                                <h3 class="appartment-title">Random Street, Apt B453, New York</h3>
-                                <div class="appartment-details">
+                            <div class="appartment-body box-body">
+                                <h3 class="appartment-title box-title">Random Street, Apt B453, New York</h3>
+                                <div class="appartment-details box-details">
                                     <div class="price">
                                         <p>$3,500</p>
                                     </div>
@@ -251,13 +251,13 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="appartment-card">
+                        <div class="appartment-card box">
                             <div class="appartment-img">
                                 <img src="images/others/appartment.png" alt="appartments img">
                             </div>
-                            <div class="appartment-body">
-                                <h3 class="appartment-title">Random Street, Apt B453, New York</h3>
-                                <div class="appartment-details">
+                            <div class="appartment-body box-body">
+                                <h3 class="appartment-title box-title">Random Street, Apt B453, New York</h3>
+                                <div class="appartment-details box-details">
                                     <div class="price">
                                         <p>$3,500</p>
                                     </div>
@@ -276,13 +276,13 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <div class="appartment-card">
+                        <div class="appartment-card box">
                             <div class="appartment-img">
                                 <img src="images/others/appartment.png" alt="appartments img">
                             </div>
-                            <div class="appartment-body">
-                                <h3 class="appartment-title">Random Street, Apt B453, New York</h3>
-                                <div class="appartment-details">
+                            <div class="appartment-body box-body">
+                                <h3 class="appartment-title box-title">Random Street, Apt B453, New York</h3>
+                                <div class="appartment-details box-details">
                                     <div class="price">
                                         <p>$3,500</p>
                                     </div>
@@ -397,6 +397,80 @@
         </section>
         <!-- End services Section -->
 
+        <!-- Start agents section -->
+        <section class="agents" id="agents">
+            <div class="container">
+                <h2 class="section-title">Meet Our Agents</h2>
+                <p class="paragraph">In this space market-facing, yet UI work flows , or bake it in.<br>Red flag we need
+                    a recap by eod, cob or whatever comes<br>first agile at the end of the day. </p>
+
+                <div class="row">
+                    <div class="col-12 col-md-12 col-lg-4">
+                        <div class="box agent-box">
+                            <div class="agent-img">
+                                <img src="images/others/appartment.png" alt="agent img">
+                            </div>
+                            <div class="box-body agent-box">
+                                <h3 class="box-title">Agent</h3>
+                                <div class="box-details">
+                                    <p class="name">Mr. Luke Skywalker</p>
+                                    <div class="social-links">
+                                        <a href="#">
+                                            <img src="images/icons/facebook.svg" alt="facebook icon">
+                                        </a>
+                                        <a href="#"><img src="images/icons/twitter.svg" alt="twitter icon"></a>
+                                        <a href="#"><img src="images/icons/dribble.svg" alt="dribble icon"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-12 col-lg-4">
+                        <div class="box agent-box">
+                            <div class="agent-img">
+                                <img src="images/others/appartment.png" alt="agent img">
+                            </div>
+                            <div class="box-body agent-box">
+                                <h3 class="box-title">Agent</h3>
+                                <div class="box-details">
+                                    <p class="name">Mr. Luke Skywalker</p>
+                                    <div class="social-links">
+                                        <a href="#">
+                                            <img src="images/icons/facebook.svg" alt="facebook icon">
+                                        </a>
+                                        <a href="#"><img src="images/icons/twitter.svg" alt="twitter icon"></a>
+                                        <a href="#"><img src="images/icons/dribble.svg" alt="dribble icon"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-12 col-lg-4">
+                        <div class="box agent-box">
+                            <div class="agent-img">
+                                <img src="images/others/appartment.png" alt="agent img">
+                            </div>
+                            <div class="box-body agent-box">
+                                <h3 class="box-title">Agent</h3>
+                                <div class="box-details">
+                                    <p class="name">Mr. Luke Skywalker</p>
+                                    <div class="social-links">
+                                        <a href="#">
+                                            <img src="images/icons/facebook.svg" alt="facebook icon">
+                                        </a>
+                                        <a href="#"><img src="images/icons/twitter.svg" alt="twitter icon"></a>
+                                        <a href="#"><img src="images/icons/dribble.svg" alt="dribble icon"></a>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End agents section -->
+        
     </main>
 
 
