--- a/index.html
+++ b/index.html
@@ -518,9 +518,71 @@
             </div>
         </section>
         <!-- End Add Section -->
-
     </main>
 
+    <!-- Start footer -->
+    <footer>
+        <div class="container">
+            <div class="footer-top">
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <h4 class="small-title">luxestate</h4>
+                        <h4 class="small-title">Explore Real Estate</h4>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <form class="subscribe-form">
+                            <input type="text" class="input-search" placeholder="Subscribe To Our Newsletter" />
+                            <button class="btn search-btn">
+                                <img src="images/icons/arrow-right.svg" alt="arrow icon">
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom row">
+                <div class="col-sm-12 col-md-4 footer-logo">
+                    <h5 class="small-title">luxestate</h5>
+                    <p class="paragraph">
+                        &copy; 2021 - luxestate,
+                        <br />
+                        All Right Reserved
+                    </p>
+                </div>
+                <div class="col-sm-3 col-md-2 footer-column">
+                    <h5 class="footer-column-title">LUXESTATE</h5>
+                    <ul>
+                        <li><a href="#">Agents</a></li>
+                        <li><a href="#">Hunters</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3 col-md-2 footer-column">
+                    <h5 class="footer-column-title">COMPANY</h5>
+                    <ul>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Social</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3 col-md-2 footer-column">
+                    <h5 class="footer-column-title">PRODUCT</h5>
+                    <ul>
+                        <li><a href="#">Appartments</a></li>
+                        <li><a href="#">How It Works</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3 col-md-2 footer-column">
+                    <h5 class="footer-column-title">SERVICES</h5>
+                    <ul>
+                        <li><a href="#">Renting</a></li>
+                        <li><a href="#">Selling</a></li>
+                        <li><a href="#">Building</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- End footer -->
 
     <!-- JS Vendors -->
     <script src="js/vendors/bootstrap.min.js"></script>
