--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!-- Start Add Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-                <a class="navbar-brand" href="#">luxestate</a>
+                <a class="navbar-brand" href="#home">luxestate</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -521,7 +521,7 @@
     </main>
 
     <!-- Start footer -->
-    <footer>
+    <footer id="contact-us">
         <div class="container">
             <div class="footer-top">
                 <div class="row">
