add images in appartment boxs and improvement in design

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="appartment-card box">
                             <div class="appartment-img">
-                                <img src="images/others/appartment.png" alt="appartments img">
+                                <img src="images/apertments/1.jpg" alt="appartments img">
                             </div>
                             <div class="appartment-body box-body">
                                 <h3 class="appartment-title box-title">Random Street, Apt B453, New York</h3>
@@ -178,7 +178,7 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="appartment-card box">
                             <div class="appartment-img">
-                                <img src="images/others/appartment.png" alt="appartments img">
+                                <img src="images/apertments/2.jpg" alt="appartments img">
                             </div>
                             <div class="appartment-body box-body">
                                 <h3 class="appartment-title box-title">Random Street, Apt B453, New York</h3>
@@ -203,7 +203,7 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="appartment-card box">
                             <div class="appartment-img">
-                                <img src="images/others/appartment.png" alt="appartments img">
+                                <img src="images/apertments/3.jpg" alt="appartments img">
                             </div>
                             <div class="appartment-body box-body">
                                 <h3 class="appartment-title box-title">Random Street, Apt B453, New York</h3>
@@ -228,7 +228,7 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="appartment-card box">
                             <div class="appartment-img">
-                                <img src="images/others/appartment.png" alt="appartments img">
+                                <img src="images/apertments/4.jpg" alt="appartments img">
                             </div>
                             <div class="appartment-body box-body">
                                 <h3 class="appartment-title box-title">Random Street, Apt B453, New York</h3>
@@ -253,7 +253,7 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="appartment-card box">
                             <div class="appartment-img">
-                                <img src="images/others/appartment.png" alt="appartments img">
+                                <img src="images/apertments/5.jpg" alt="appartments img">
                             </div>
                             <div class="appartment-body box-body">
                                 <h3 class="appartment-title box-title">Random Street, Apt B453, New York</h3>
@@ -278,7 +278,7 @@
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="appartment-card box">
                             <div class="appartment-img">
-                                <img src="images/others/appartment.png" alt="appartments img">
+                                <img src="images/apertments/6.jpg" alt="appartments img">
                             </div>
                             <div class="appartment-body box-body">
                                 <h3 class="appartment-title box-title">Random Street, Apt B453, New York</h3>
