add images in agents boxs and improvement in design

--- a/index.html
+++ b/index.html
@@ -404,11 +404,11 @@
                 <p class="paragraph">In this space market-facing, yet UI work flows , or bake it in.<br>Red flag we need
                     a recap by eod, cob or whatever comes<br>first agile at the end of the day. </p>
 
-                <div class="row">
+                <div class="row agent-group">
                     <div class="col-12 col-md-12 col-lg-4">
                         <div class="box agent-box">
                             <div class="agent-img">
-                                <img src="images/others/appartment.png" alt="agent img">
+                                <img src="images/agents/7.jpg" alt="agent img">
                             </div>
                             <div class="box-body agent-box">
                                 <h3 class="box-title">Agent</h3>
@@ -428,7 +428,7 @@
                     <div class="col-12 col-md-12 col-lg-4">
                         <div class="box agent-box">
                             <div class="agent-img">
-                                <img src="images/others/appartment.png" alt="agent img">
+                                <img src="images/agents/8.jpg" alt="agent img">
                             </div>
                             <div class="box-body agent-box">
                                 <h3 class="box-title">Agent</h3>
@@ -448,7 +448,7 @@
                     <div class="col-12 col-md-12 col-lg-4">
                         <div class="box agent-box">
                             <div class="agent-img">
-                                <img src="images/others/appartment.png" alt="agent img">
+                                <img src="images/agents/9.jpg" alt="agent img">
                             </div>
                             <div class="box-body agent-box">
                                 <h3 class="box-title">Agent</h3>
