add funtcion for add box-shadow in navbar

--- a/index.html
+++ b/index.html
@@ -585,6 +585,7 @@
     <!-- End footer -->
 
     <!-- JS Vendors -->
+    <script src="js/vendors/jquery.min.js"></script>
     <script src="js/vendors/bootstrap.min.js"></script>
     <!-- Main JS -->
     <script src="js/main.js"></script>
