add funtcion counter number for about section

--- a/index.html
+++ b/index.html
@@ -123,19 +123,19 @@
                     <div class="col-md-6 col-sm-12 statistic">
                         <div class="row">
                             <div class="col-6 statistic-box">
-                                <span>748</span>
+                                <span class="count">748</span>
                                 <p>Appartments</p>
                             </div>
                             <div class="col-6 statistic-box">
-                                <span>3854</span>
+                                <span class="count">3854</span>
                                 <p>Clients</p>
                             </div>
                             <div class="col-6 statistic-box">
-                                <span>24</span>
+                                <span class="count">24</span>
                                 <p>Employees</p>
                             </div>
                             <div class="col-6 statistic-box">
-                                <span>14</span>
+                                <span class="count">14</span>
                                 <p>Awards</p>
                             </div>
                         </div>
